[package]
name = "yaml_serde-fuzz"
version = "0.0.0"
authors = ["YAML Organization <noreply@yaml.org>"]
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
yaml_serde = { path = ".." }

[[bin]]
name = "fuzz_from_slice"
path = "fuzz_targets/fuzz_from_slice.rs"
test = false
doc = false

[workspace]
